# serverless-pyperf

./: .gitignore  Makefile  func_tests.py  lambda_function.py  requirements.txt  setup.cfg
.github/workflows/: main_pyperf.yml
aws-lambda/: Dockerfile  lambda_function.py  make_zip.sh
azure-function/: function_app.py  requirements.txt
azure-functions/: function_app.py
cf-workers/: main.py  wrangler.toml
gc-run-function/: README.rst  main.py  requirements.txt
oracle-functions/: func.py  func.yaml
scw/: app.py  requirements.txt
serverless_pyperf/: __init__.py  __main__.py  main.py  mercato.py  run.py  tests.py
