[metadata]
name = serverless_pyperf
version = attr: serverless_pyperf.__version__
author = Anthony Monthe
author_email = anthony@cloud-mercato.com
url = https://github.com/cloudmercato/serverless-pyperf
project_urls = 
summary = attr: serverless_pyperf.__doc__
description_file = file: README.rst
long_description = file: README.rst
description_content_type = text/x-rst; charset=UTF-8
license = BSD 3-Clause License

requires_dist =
    setuptools

classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Topic :: System :: Benchmark

keywords = benchmark, cloud


[options]
zip_safe = False
include_package_data = True
package_dir=
packages=find:
    
install_requires = file: requirements.txt

test_suite = serverless_pyperf.tests
tests_require =

[options.extras_require]

test =
    coverage

[options.entry_points]
console_scripts =
    serverless-pyperf = serverless_pyperf.__main__:main


[coverage:run]
omit = serverless_pyperf/tests/*
branch = True
source = serverless_pyperf

[coverage:report]
show_missing = true
exclude_lines =
    noqa
    NotImplemented
